--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <body>
         <h1>Pendulum</h1>
         <canvas id="canvas" width="800" height="600"></canvas>
+        <script src="js/PA_toolbox.js" type="text/javascript"></script>
         <script src="js/Pendulum.js" type="text/javascript"></script>
+        <script src="js/DoublePendulum.js" type="text/javascript"></script>
         <script src="js/app.js" type="text/javascript"></script>
     </body>
 </html>
