--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
-        <h1>Pendulum</h1>
-        <canvas id="canvas" width="800" height="600"></canvas>
-        <script src="js/PA_toolbox.js" type="text/javascript"></script>
-        <script src="js/Pendulum.js" type="text/javascript"></script>
-        <script src="js/DoublePendulum.js" type="text/javascript"></script>
-        <script src="js/app.js" type="text/javascript"></script>
+        <div id="wrapper">
+            <h1>Pendulum</h1>
+            <canvas id="canvas" width="800" height="600"></canvas>
+            
+            <script src="js/PA_toolbox.js" type="text/javascript"></script>
+            <script src="js/Pendulum.js" type="text/javascript"></script>
+            <script src="js/DoublePendulum.js" type="text/javascript"></script>
+            <script src="js/app.js" type="text/javascript"></script>
+        </div>
     </body>
 </html>
